src/objects/Lead.object
<CustomObject>
    <fields>
        <fullName>Active_Lead_Owner__c</fullName>
        <formula>Owner:User.IsActive</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Active Lead Owner</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Actively_Being_Sequenced__c</fullName>
        <defaultValue>false</defaultValue>
        <description>True/False Value for checkbox - Active in Outreach Sequence</description>
        <label>Actively Being Sequenced</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Assign_Account_Manually__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check this field in order to bypass round robin assignment and assign the account to a specific user.</inlineHelpText>
        <label>Assign Account Manually</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Assign_Manually__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This is to bypass Lead Assignment via Round Robin</description>
        <inlineHelpText>This is to bypass Lead Assignment via Round Robin</inlineHelpText>
        <label>Assign Manually</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Became_MQL_Date__c</fullName>
        <description>Date that lead hit MQL criteria in Hubspot</description>
        <label>Became MQL Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Created_From_Lead__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Created From Lead</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Created_by_Role_Static__c</fullName>
        <label>Created by Role (Static)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Prospect_Stage__c</fullName>
        <description>Cold/Not Started, Approaching, Replied, etc.</description>
        <label>Current Prospect Stage</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Sequence_Name__c</fullName>
        <description>Name of Currently active sequence</description>
        <label>Current Sequence Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Sequence_Start_Date__c</fullName>
        <description>WFR setup to assign date based on when the “Actively Being Sequenced” box is checked</description>
        <label>Current Sequence Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Current_Sequence_Step_Number__c</fullName>
        <description>Number of Sequence Step (Numerical Value)</description>
        <label>Current Sequence Step Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Current_Sequence_Step_Type__c</fullName>
        <description>auto_email, manual_email, call, task</description>
        <label>Current Sequence Step Type</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Sequence_Task_Due_Date__c</fullName>
        <description>Due date of current task (i.e. 10/18/2016)</description>
        <label>Current Sequence Task Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Disqualified_Reason__c</fullName>
        <label>Disqualified Reason</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Status</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Product Does Not Fit Need</fullName>
                </value>
                <value>
                    <fullName>Prefers Existing Solution</fullName>
                </value>
                <value>
                    <fullName>Not the Right Person</fullName>
                </value>
                <value>
                    <fullName>No Budget</fullName>
                </value>
                <value>
                    <fullName>Not a Valid Title</fullName>
                </value>
                <value>
                    <fullName>Not in Target Market</fullName>
                </value>
                <value>
                    <fullName>Bad Data</fullName>
                </value>
                <value>
                    <fullName>Do Not Contact - Blacklisted</fullName>
                </value>
                <value>
                    <fullName>Do Not Contact - Unsubscribed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DoNotDelete__c</fullName>
        <defaultValue>false</defaultValue>
        <label>DoNotDelete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Follow_Up_Date__c</fullName>
        <label>Follow Up Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Full_Name__c</fullName>
        <formula>FirstName +&quot; &quot;+ LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Full Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Function__c</fullName>
        <label>Function</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Business Development</fullName>
                </value>
                <value>
                    <fullName>Customer Support</fullName>
                </value>
                <value>
                    <fullName>Engineering</fullName>
                </value>
                <value>
                    <fullName>Finance</fullName>
                </value>
                <value>
                    <fullName>Marketing</fullName>
                </value>
                <value>
                    <fullName>Operations</fullName>
                </value>
                <value>
                    <fullName>Product</fullName>
                </value>
                <value>
                    <fullName>Sales</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Funnel_Grade__c</fullName>
        <label>Funnel Grade</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>A</fullName>
                </value>
                <value>
                    <fullName>B</fullName>
                </value>
                <value>
                    <fullName>C</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>HubSpot_Lifecycle_Stage__c</fullName>
        <label>HubSpot Lifecycle Stage</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Subscriber</fullName>
                </value>
                <value>
                    <fullName>Lead</fullName>
                </value>
                <value>
                    <fullName>Marketing Qualified Lead</fullName>
                </value>
                <value>
                    <fullName>Sales Qualified Lead</fullName>
                </value>
                <value>
                    <fullName>Opportunity</fullName>
                </value>
                <value>
                    <fullName>Customer</fullName>
                </value>
                <value>
                    <fullName>Evangelist</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LID__LinkedIn_Company_Id__c</fullName>
        <description>LinkedIn Id of the company</description>
        <label>LinkedIn Company Id</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LID__LinkedIn_Member_Token__c</fullName>
        <description>LinkedIn Id of the member/lead</description>
        <label>LinkedIn Member Token</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Created_Date_Static__c</fullName>
        <formula>CreatedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lead Created Date (Static)</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Lead_Custom_Tags__c</fullName>
        <label>Lead Custom Tags</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Inbound_Outbound__c</fullName>
        <label>Lead Class</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Inbound</fullName>
                </value>
                <value>
                    <fullName>SDR Outbound</fullName>
                </value>
                <value>
                    <fullName>AE Outbound</fullName>
                </value>
                <value>
                    <fullName>Outbound</fullName>
                    <isActive>false</isActive>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Lead_Number__c</fullName>
        <displayFormat>{0}</displayFormat>
        <label>Lead Number</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Lead_Source_Detail__c</fullName>
        <description>A shorthand description, detailing the specific source of the Lead (i.e. Dreamforce 2014 Leads, &apos;Contact Us&apos; Web Form, etc.).</description>
        <inlineHelpText>A shorthand description, detailing the specific source of the Lead (i.e. Dreamforce 2014 Leads, &apos;Contact Us&apos; Web Form, etc.).</inlineHelpText>
        <label>Lead Source Detail</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_URL__c</fullName>
        <formula>&quot;https://na31.salesforce.com/&quot; +  Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lead URL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MC4SF__MC_Subscriber__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>MC Subscriber</label>
        <referenceTo>MC4SF__MC_Subscriber__c</referenceTo>
        <relationshipLabel>Leads</relationshipLabel>
        <relationshipName>Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Num_of_Employees_from_Hubspot__c</fullName>
        <label>Num of Employees from Hubspot</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1-10</fullName>
                </value>
                <value>
                    <fullName>10-50</fullName>
                </value>
                <value>
                    <fullName>50-100</fullName>
                </value>
                <value>
                    <fullName>100-250</fullName>
                </value>
                <value>
                    <fullName>250-500</fullName>
                </value>
                <value>
                    <fullName>500-1000</fullName>
                </value>
                <value>
                    <fullName>1000-2500</fullName>
                </value>
                <value>
                    <fullName>2500-5000</fullName>
                </value>
                <value>
                    <fullName>5000-10000</fullName>
                </value>
                <value>
                    <fullName>10000+</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Out_of_Sequence_Date__c</fullName>
        <description>The most recent date when a contact has been pulled out of sequence.</description>
        <label>Out of Sequence Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Qualification_Notes__c</fullName>
        <inlineHelpText>Business needs - focus on those that your solution(s) can support
Urgency - specific event(s) or tangible impact(s) that demonstrate(s) urgency
Money - is it available? who controls it? how is allocation determined?
Authority - who decides/influences?</inlineHelpText>
        <label>Qualification Notes</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Qualified_Lead_to_Contact_Mapping__c</fullName>
        <label>Qualified Lead to Contact Mapping</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Contacted and Sales Qualified - New Opportunity</fullName>
                </value>
                <value>
                    <fullName>Added to Existing Account - Not in Sequence</fullName>
                </value>
                <value>
                    <fullName>Sales Qualified</fullName>
                    <isActive>false</isActive>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Reschedule_Needed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check this box if initial call with prospect needs to be rescheduled.</description>
        <inlineHelpText>Check this box if initial call with prospect needs to be rescheduled.</inlineHelpText>
        <label>Reschedule Needed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Round_Robin_ID__c</fullName>
        <formula>MOD(VALUE(Lead_Number__c) ,1) +1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Round Robin ID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Salesforce_User__c</fullName>
        <label>Salesforce User?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Secondary_Lead_Source__c</fullName>
        <inlineHelpText>The source from which the prospect came to submit their contact information (as determined by Primary Lead Source).</inlineHelpText>
        <label>Secondary Lead Source</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Direct</fullName>
                </value>
                <value>
                    <fullName>Organic</fullName>
                </value>
                <value>
                    <fullName>LinkedIn Ads</fullName>
                </value>
                <value>
                    <fullName>Facebook Ads</fullName>
                </value>
                <value>
                    <fullName>Google AdWords</fullName>
                </value>
                <value>
                    <fullName>Website Referral</fullName>
                </value>
                <value>
                    <fullName>Partner Referral</fullName>
                </value>
                <value>
                    <fullName>Customer Referral</fullName>
                </value>
                <value>
                    <fullName>Conference</fullName>
                </value>
                <value>
                    <fullName>Hosted Event</fullName>
                </value>
                <value>
                    <fullName>Node</fullName>
                </value>
                <value>
                    <fullName>List Purchase</fullName>
                </value>
                <value>
                    <fullName>LinkedIn Sales Navigator</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Seniority__c</fullName>
        <label>Seniority</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>CxO</fullName>
                </value>
                <value>
                    <fullName>VP</fullName>
                </value>
                <value>
                    <fullName>Director</fullName>
                </value>
                <value>
                    <fullName>Manager</fullName>
                </value>
                <value>
                    <fullName>Individual Contributor</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Time_Zone__c</fullName>
        <label>Time Zone</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Pacific</fullName>
                </value>
                <value>
                    <fullName>Eastern</fullName>
                </value>
                <value>
                    <fullName>Central</fullName>
                </value>
                <value>
                    <fullName>International</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Total__c</fullName>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Unqualified_Reason_Detail__c</fullName>
        <inlineHelpText>Describe why a lead is unqualified (provide as much detail as you can). If unqualified now but potentially a fit for the future, set a reminder task to re-engage at a future date.</inlineHelpText>
        <label>Disqualified Reason Detail</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Unqualified_Reason__c</fullName>
        <description>The reason the lead is Unqualified.</description>
        <inlineHelpText>Not a Business Priority = No need or urgency for Node. Product Not a Fit = Not feasible solution (e.g. not SFDC customer). No Budget = Budget not in ballpark. No Authority = Not able to decide or influence decision to purchase.</inlineHelpText>
        <label>Unqualified Reason</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Not a Business Priority</fullName>
                </value>
                <value>
                    <fullName>Product Not a Fit</fullName>
                </value>
                <value>
                    <fullName>No Budget</fullName>
                </value>
                <value>
                    <fullName>No Authority</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>cas__FirstAttempt__c</fullName>
        <label>First Attempt</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>cas__First_Conversation_Date__c</fullName>
        <label>First Conversation</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>cas__LastAttempt__c</fullName>
        <label>Last Attempt</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>cas__Last_Connect__c</fullName>
        <label>Last Conversation</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>cas__List_Name__c</fullName>
        <description>CAS List Name</description>
        <label>List Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cas__Most_Recent_Attempt_Disposition__c</fullName>
        <description>To store attempt disposition for each call through CAS</description>
        <label>Most Recent Attempt Disposition</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cas__Most_Recent_Conversation_Disposition__c</fullName>
        <description>To store disposition selected by pitcher through CAS</description>
        <label>Most Recent Conversation Disposition</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cas__Most_Recent_Disposition__c</fullName>
        <label>Most Recent Disposition</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Conversation</fullName>
                </value>
                <value>
                    <fullName>DoNotCall – 24 Hour Pause</fullName>
                </value>
                <value>
                    <fullName>No Answer</fullName>
                </value>
                <value>
                    <fullName>Problem - Blocked by Gatekeeper</fullName>
                </value>
                <value>
                    <fullName>Problem – Fax Tone</fullName>
                </value>
                <value>
                    <fullName>Problem – Incomplete Record</fullName>
                </value>
                <value>
                    <fullName>Problem – Target Inaccurate</fullName>
                </value>
                <value>
                    <fullName>Problem – Target In Different Location</fullName>
                </value>
                <value>
                    <fullName>Problem - Target Left Organization</fullName>
                </value>
                <value>
                    <fullName>Problem – Wrong Company</fullName>
                </value>
                <value>
                    <fullName>Target Not Available</fullName>
                </value>
                <value>
                    <fullName>User Not Available</fullName>
                </value>
                <value>
                    <fullName>Voicemail Dropped</fullName>
                </value>
                <value>
                    <fullName>Voicemail Reached</fullName>
                </value>
                <value>
                    <fullName>Voicemail Reached – Direct Number</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>cas__NumberAttempts__c</fullName>
        <label>Number of Attempts</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>cas__NumberConnects__c</fullName>
        <label>Number Of Conversations</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>cas__Penalty_Box_Status__c</fullName>
        <defaultValue>false</defaultValue>
        <description>CAS Penalty Box Status</description>
        <label>Penalty Box Status</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>nde__Company_Domain__c</fullName>
        <description>Node provided company domain name</description>
        <label>Company Domain</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nde__Node_Available_Matches__c</fullName>
        <label>Node Available Matches</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Node City Vertical Matches</fullName>
                </value>
                <value>
                    <fullName>Node City Matches</fullName>
                </value>
                <value>
                    <fullName>Node Vertical Matches</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>nde__Node_Best_Matches_Context__c</fullName>
        <label>Node Best Matches Context</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nde__Node_Best_Matches__c</fullName>
        <label>Node Best Matches</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nde__Node_City_and_Category_Matches__c</fullName>
        <label>Node City and Category Matches</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nde__Node_City_and_Subcategory_Matches__c</fullName>
        <label>Node City and Subcategory Matches</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nde__Node_Company_Description__c</fullName>
        <label>Node Company Description</label>
        <length>3000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>nde__Node_Company_Revenue__c</fullName>
        <label>Node Company Revenue</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nde__Node_Context_Formula__c</fullName>
        <description>Node-generated context with relevant information about a lead.</description>
        <formula>BLANKVALUE(nde__Node_Context__c, &quot;Working on it...&quot;)</formula>
        <label>Node Context</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nde__Node_Context__c</fullName>
        <defaultValue>&quot;Working on it...&quot;</defaultValue>
        <description>Node-generated context with relevant information about a lead.</description>
        <label>Node Context Raw</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nde__Node_Corporate_Parent__c</fullName>
        <label>Node Corporate Parent</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nde__Node_Corporate_Subsidiaries__c</fullName>
        <label>Node Corporate Subsidiaries</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>nde__Node_Data_Version__c</fullName>
        <label>Node Data Version</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>nde__Node_Education__c</fullName>
        <label>Node Education</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nde__Node_Education_in_Common__c</fullName>
        <label>Node Education in Common</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nde__Node_Employee_Count__c</fullName>
        <description>Number of employees at the company</description>
        <label>Node Employee Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>nde__Node_Employee_Size__c</fullName>
        <label>Node Employee Size</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nde__Node_Existing_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Node Existing Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Leads (Node Existing Account)</relationshipLabel>
        <relationshipName>Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>nde__Node_Former_Customer_Contact__c</fullName>
        <label>Node Former Customer Contact</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nde__Node_Generated_Checkbox__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Was this lead generated by Node.io?</inlineHelpText>
        <label>Node Generated?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>nde__Node_Generated_Lead_Formula__c</fullName>
        <description>Was this lead generated or analyzed by Node.io?</description>
        <formula>IF( nde__Node_Generated_Checkbox__c, IMAGE(&quot;https://ded8kzigizww9.cloudfront.net/node-generated-caps-2x-02.png&quot;, &quot;Node Generated&quot;, 12, 110),
IMAGE(&quot;https://ded8kzigizww9.cloudfront.net/node-analyzed-caps-2x-02.png&quot;, &quot;Node Analyzed&quot;, 12, 99))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Node Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nde__Node_Global_Parent_Lookup__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Node Global Parent Lookup</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Leads</relationshipLabel>
        <relationshipName>Subsidiary_Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>nde__Node_Global_Parent__c</fullName>
        <label>Node Global Parent</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nde__Node_HQ_City__c</fullName>
        <label>Node HQ City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nde__Node_HQ_Country__c</fullName>
        <label>Node HQ Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nde__Node_HQ_State__c</fullName>
        <label>Node HQ State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nde__Node_HQ_Street__c</fullName>
        <label>Node HQ Street</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nde__Node_HQ_Zip__c</fullName>
        <label>Node HQ Zip</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nde__Node_Industry__c</fullName>
        <label>Node Industry</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nde__Node_Internal__c</fullName>
        <description>This information in used by Node Sales Analyst</description>
        <label>Node Internal</label>
        <length>15000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>nde__Node_Keywords__c</fullName>
        <description>Node Keywords</description>
        <label>Node Keywords</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>nde__Node_Last_Modified_Date__c</fullName>
        <label>Node Last Modified Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>nde__Node_NAICS_Code__c</fullName>
        <description>Company primary NAICS Code</description>
        <label>Node NAICS Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nde__Node_NAICS_Description__c</fullName>
        <description>Company NAICS code brief description</description>
        <label>Node NAICS Description</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nde__Node_Primary_Company_Name__c</fullName>
        <label>Node Primary Company Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nde__Node_Primary_Domain__c</fullName>
        <label>Node Primary Domain</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nde__Node_Priority_Formula__c</fullName>
        <formula>CASE(nde__Node_Priority__c,
-1, &quot;N/A&quot;,
0, &quot;U&quot;,
1, &quot;C&quot;,
2, &quot;B&quot;, 
3, &quot;A&quot;, 
4, &quot;Closed&quot;,
10, &quot;D&quot;,
20, &quot;C&quot;,
30, &quot;B&quot;,
40, &quot;A&quot;,
100, &quot;Closed&quot;,
&quot;U&quot;)</formula>
        <label>Node Priority</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nde__Node_Priority__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Node Grade (#)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>nde__Node_Subcategory_Matches__c</fullName>
        <label>Node Subcategory Matches</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nde__Node_Target_Profile__c</fullName>
        <label>Node Target Profile</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nde__Node_Technologies_Found__c</fullName>
        <label>Node Technologies Found</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>default</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>nde__Technologies_Used__c</fullName>
        <description>A Node-provided list of technologies used by an organization.</description>
        <label>Node Technologies Used</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>nde__You_Should_Mention__c</fullName>
        <defaultValue>&quot;Coming soon! Data will appear here once processing is complete.&quot;</defaultValue>
        <label>Node You Should Mention</label>
        <length>1500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>sfLma__Subscriber_Org_Type__c</fullName>
        <description>The Edition of this org. UE, EE, PE, TE, Free</description>
        <label>Subscriber Org Type</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zisf__ZoomInfo_Email__c</fullName>
        <description>ZoomInfo Email Address for the Lead record.</description>
        <inlineHelpText>ZoomInfo Email Address for the Lead record.</inlineHelpText>
        <label>ZoomInfo Email</label>
        <type>Email</type>
    </fields>
</CustomObject>